# financial_application

./: Makefile  pyproject.toml
financial_app_code/: database.py  main.py  settings.py
financial_app_code/templates/: base.html  categories.html
