[tool.poetry]
name = "financial-application"
version = "0.1.0"
description = ""
authors = ["Dmitriev Konstantin <dmitrievkons2000@gmail.com>"]
readme = "README.md"
packages = [{include = "financial_application"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
